--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
-  background: #0f3257;
+  background: #ffffff;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   border-radius: 15px;
 }
