--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ nav a:active {
 main {
   flex: 1;
   padding: 2rem;
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
   width: 100%;
   background: #ffffff;
@@ -353,7 +353,7 @@ footer {
   flex-direction: column;
   
   flex: 1 1 300px;
-  max-width: 100px;
+  max-width: 1000px;
 }
 
 .experience-card:hover {
