--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,9 @@ footer {
   flex-direction: column;
   
   flex: 0 1 calc(33.333% - 20px);
-  max-width: 1000px;flex: 1 1 300px;
+
+  min-width: 300px; 
+  max-width: 1000px;
 }
 
 .experience-card:hover {
